[tool.poetry]
name = "dgde-coco"
version = "0.1.0"
description = ""
authors = ["gardzielb <bartosz.g.1999@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
pip = "^22.1.2"
numpy = "^1.22.4"
cocopp = "^2.6"
matplotlib = "^3.5.2"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
